--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -67,3 +67,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* 修改滚动条的宽度和颜色 */
+/* Webkit浏览器（如Chrome和Safari）*/
+::-webkit-scrollbar {
+  width: 6px; /* 调整滚动条宽度 */
+}
+
+/* 滚动条轨道 */
+::-webkit-scrollbar-track {
+  border-radius: 20px;
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  background: #888; /* 滚动条滑块颜色 */
+  border-radius: 20px;
+}
+
+/* 滚动条悬停时滑块 */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* 鼠标悬停时滚动条滑块颜色 */
+  border-radius: 20px;
+}
+html {
+  scroll-behavior: smooth;
+}
